add test result

--- a/.gitattributes
+++ b/.gitattributes
@@ -1,3 +1,4 @@
 *.v2 filter=lfs diff=lfs merge=lfs -text
 *.data-00000-of-00001 filter=lfs diff=lfs merge=lfs -text
 *.tempstate10306162396646485236 filter=lfs diff=lfs merge=lfs -text
+*.gif filter=lfs diff=lfs merge=lfs -text
